--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -144,4 +144,11 @@
       android:layout_height="wrap_content"
       android:text="Data graph"
       android:onClick="buttonPress" />
+  <Button
+      android:id="@+id/button_data"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:text="Data"
+      android:onClick="buttonPress" />
+  
 </LinearLayout>
