* Added buttons for adding speeds of different vehicle types, which currently just increment different counters * Updated TODO to reflect the change * The issue mentioned in the previous commit was occurring because we didn't clean up before rebuilding

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -127,6 +127,16 @@
       android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content" >
+    <!-- This only works for API level >= 14
+    <Space
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+    -->
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
     <Button
         android:id="@+id/button0"
         android:layout_width="fill_parent"
@@ -141,12 +151,31 @@
         android:layout_weight="1"
         android:text="Clear"
         android:onClick="buttonPress" />
+  </LinearLayout>
+  <LinearLayout
+      android:orientation="horizontal"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content" >
     <Button
-        android:id="@+id/button_add"
+        android:id="@+id/button_add_car"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Add"
+        android:text="Add car"
+        android:onClick="buttonPress" />
+    <Button
+        android:id="@+id/button_add_van"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Add van"
+        android:onClick="buttonPress" />
+    <Button
+        android:id="@+id/button_add_truck_bus"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Add truck / bus"
         android:onClick="buttonPress" />
   </LinearLayout>
   <Button
